--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">RoadChampion</string>
     <string name="menu_main">Witaj wodzu!</string>
     <string name="new_route">Nowa Trasa</string>
     <string name="history">Historia Tras</string>
